--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
               wood, sleek metal accents, and large windows that flood the space with natural light.
             </p>
-            <a class="btn bg-primary rounded-[32px]">View Details <img src="./assets/arrow-up-right-blue.png" alt=""
+            <a class="btn bg-[#ABEF5F80] rounded-[32px]">View Details <img src="./assets/arrow-up-right-blue.png" alt=""
                 height="25" width="25"></a>
           </div>
         </div>
@@ -187,35 +187,35 @@
           featuring
           weathered wood, sleek metal accents.</p>
       </div>
-      <div class="grid lg:grid-cols-4 max-sm:grid-cols-1 max-w-4xl m-auto gap-6 py-8">
+      <div class="grid lg:grid-cols-5 max-sm:flex max-sm:flex-col max-w-5xl max-sm:max-w-[85%] m-auto gap-5 py-8">
         <div
-          class=" lg:flex justify-center items-center lg:col-span-3 max-sm:text-center max-sm:m-auto max-sm:max-w-[90%]  border-solid border-2 border-base-200 px-4 py-3 rounded-xl">
+          class=" lg:flex justify-center m-auto max-sm:flex max-sm:flex-col max-sm:justify-center items-center lg:col-span-3 border-solid border-2 border-base-200 px-4 py-3 rounded-xl">
 
-          <img src="./assets/img1.png" alt="" class="w-56 h-full">
+          <img src="./assets/img1.png" alt="" class="lg:w-1/2 h-full">
 
           <div class="p-3">
             <p class="text-base font-bold py-2">Commercial</p>
             <p class="text-base ">The barn house captivates with its blend of rustic charm and modern. The barn house
               captivates with its blend of rustic charm and modern .</p>
-            <button class=" bg-base-200 text-center px-2 rounded-box flex ps-1 py-2 font-bold">View Details <img
+            <button class=" bg-base-100 text-center px-2 rounded-box flex ps-1 py-2 font-bold">View Details <img
                 src="./assets/arrow-up-right-blue.png" alt="" height="22" width="22" class="mx-2"></button>
           </div>
         </div>
         <div
-          class="flex justify-center max-sm:m-auto max-sm:max-w-[90%] p-3 border-solid border-2 border-base-200 px-4 rounded-xl">
-          <img src="./assets/img2.png" alt="" class="w-56 h-full">
+          class="flex justify-center max-sm:m-auto lg:col-span-2 max-sm:max-w-[90%] p-3 border-solid border-2 border-base-200 px-4 rounded-xl">
+          <img src="./assets/img2.png" alt="" class="w-1/2h-full">
         </div>
         <div
           class="flex justify-center max-sm:m-auto max-sm:max-w-[90%] p-3 border-solid border-2 border-base-200 px-4 rounded-xl">
           <img src="./assets/img3.png" alt="" class="w-56 h-full">
         </div>
         <div
-          class="lg:flex max-sm:flex-col max-sm:text-center max-sm:m-auto max-sm:max-w-[90%] items-center lg:col-span-2 border-solid border-2 border-base-200 px-4 py-3 rounded-xl">
+          class="lg:flex max-sm:flex max-sm:flex-col max-sm:justify-center max-sm:text-center max-sm:m-auto max-sm:max-w-[90%] items-center lg:col-span-3 border-solid border-2 border-base-200 px-4 py-3 rounded-xl">
           <img src="./assets/img4.png" alt="" class="w-56 h-full">
           <div class="p-3">
             <p class="text-base font-bold py-2">Commercial</p>
             <p class="text-base">The barn house captivates with its blend of rustic charm and modern. </p>
-            <button class=" bg-base-200 text-center px-2 rounded-box flex ps-1 font-bold ">
+            <button class=" bg-base-100 text-center px-2 rounded-box flex ps-1 font-bold ">
               View Details
               <img src="./assets/arrow-up-right-blue.png" alt="" height="22" width="22" class="mx-2">
             </button>
