--- a/index.html
+++ b/index.html
@@ -183,17 +183,14 @@
         <button class=" bg-[#ABEF5F33] text-center px-2 rounded-box"> <i class="fa-solid fa-arrow-right pe-1"
             style="color: #000000;"></i>Explore our Latest works</button>
         <h2 class="text-5xl font-bold py-4">Our Latest Portfolio</h2>
-        <p class="text-base">The barn house captivates with its blend of rustic charm and modern sophistication,<br>
+        <p class="text-base pb-8 px-4">The barn house captivates with its blend of rustic charm and modern sophistication,<br>
           featuring
           weathered wood, sleek metal accents.</p>
       </div>
-      <div class="grid lg:grid-cols-5 max-sm:flex max-sm:flex-col max-w-5xl max-sm:max-w-[85%] m-auto gap-5 py-8">
-        <div
-          class=" lg:flex justify-center m-auto max-sm:flex max-sm:flex-col max-sm:justify-center items-center lg:col-span-3 border-solid border-2 border-base-200 px-4 py-3 rounded-xl">
-
-          <img src="./assets/img1.png" alt="" class="lg:w-1/2 h-full">
-
-          <div class="p-3">
+      <div class="grid grid-cols-12 gap-5 m-auto lg:max-w-[80%] max-sm:flex max-sm:flex-col max-sm:max-w-[90%]"> <!-- main -->
+        <div class="col-span-8 flex p-4 border-solid border-2 border-base-200 rounded-xl max-sm:flex max-sm:flex-col">  <!-- main-1 -->
+          <img src="./assets/img1.png" alt="" class="lg:w-52">
+          <div class="ps-3">
             <p class="text-base font-bold py-2">Commercial</p>
             <p class="text-base ">The barn house captivates with its blend of rustic charm and modern. The barn house
               captivates with its blend of rustic charm and modern .</p>
@@ -201,18 +198,15 @@
                 src="./assets/arrow-up-right-blue.png" alt="" height="22" width="22" class="mx-2"></button>
           </div>
         </div>
-        <div
-          class="flex justify-center max-sm:m-auto lg:col-span-2 max-sm:max-w-[90%] p-3 border-solid border-2 border-base-200 px-4 rounded-xl">
-          <img src="./assets/img2.png" alt="" class="w-1/2h-full">
+        <div class="col-span-4 flex p-4 justify-center border-solid border-2 border-base-200 rounded-lg"> <!-- main-2 -->
+          <img src="./assets/img2.png" alt="" class="">
         </div>
-        <div
-          class="flex justify-center max-sm:m-auto max-sm:max-w-[90%] p-3 border-solid border-2 border-base-200 px-4 rounded-xl">
-          <img src="./assets/img3.png" alt="" class="w-56 h-full">
+        <div class="col-span-3 flex p-4 border-solid border-2 border-base-200 rounded-lg justify-center"> <!-- main-3 -->
+          <img src="./assets/img3.png" alt="" class="max-sm:scale-x-[1.35] object-cover">
         </div>
-        <div
-          class="lg:flex max-sm:flex max-sm:flex-col max-sm:justify-center max-sm:text-center max-sm:m-auto max-sm:max-w-[90%] items-center lg:col-span-3 border-solid border-2 border-base-200 px-4 py-3 rounded-xl">
-          <img src="./assets/img4.png" alt="" class="w-56 h-full">
-          <div class="p-3">
+        <div class="col-span-6 flex p-4 border-solid border-2 border-base-200 rounded-lg max-sm:flex max-sm:flex-col"> <!-- main-4 -->
+          <img src="./assets/img4.png" alt="" class="lg:w-52">
+          <div class="ps-3">
             <p class="text-base font-bold py-2">Commercial</p>
             <p class="text-base">The barn house captivates with its blend of rustic charm and modern. </p>
             <button class=" bg-base-100 text-center px-2 rounded-box flex ps-1 font-bold ">
@@ -221,9 +215,8 @@
             </button>
           </div>
         </div>
-        <div
-          class="flex justify-center p-3 max-sm:m-auto max-sm:max-w-[90%] border-solid border-2 border-base-200 px-4 rounded-xl">
-          <img src="./assets/img5.png" alt="" class="w-56 h-full">
+        <div class="col-span-3 flex justify-center p-4 border-solid border-2 border-base-200 rounded-lg"> <!-- main-5 -->
+          <img src="./assets/img5.png" alt="" class="max-sm:scale-x-[1.35] object-cover ">
         </div>
       </div>
     </div>
