--- a/index.html
+++ b/index.html
@@ -240,8 +240,50 @@
    </form>
    </section>
    <!-- ###form -->
+   <!-- unique-section -->
+  <section class="py-8">
+    <div class="grid lg:grid-cols-2 max-sm:flex max-sm:flex-col-reverse max-sm:p-4 gap-4 m-auto max-w-5xl ">
+    <div>
+      <div class="max-sm:text-center max-sm:pt-5">
+      <p class="text-yellow-900">Have Questions?</p>
+      <h2 class="text-5xl py-5 font-bold ">Frequently Asked Questions</h2>
+    </div>
+      <div class="collapse collapse-arrow bg-base-200 space-lg my-3">
+        <input type="radio" name="my-accordion-2"  />
+        <div class="collapse-title text-xl font-medium">1. What types of design services do you offer for commercial spaces?</div>
+        <div class="collapse-content">
+          <p>We offer a full range of design services for commercial spaces, including office layouts, retail interiors, and hospitality design. Our team works closely with clients to create functional, aesthetically pleasing environments that reflect your brand identity and optimize productivity.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200 my-3 ">
+        <input type="radio" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">2. How do you approach residential interior design projects?
+        </div>
+        <div class="collapse-content">
+          <p>Our approach to residential interior design is highly personalized. We begin by understanding your lifestyle, preferences, and the unique character of your space. From there, we develop a tailored design plan that blends functionality with beauty, ensuring your home reflects your taste and meets your practical needs.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200 my-3">
+        <input type="radio" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">3. Can you work with existing furniture and décor in my home or office?</div>
+        <div class="collapse-content">
+          <p>Absolutely! We believe in making the most of what you already have. We can incorporate your existing furniture and décor into the new design, complementing it with carefully selected new pieces to create a cohesive and refreshed look.</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow bg-base-200 my-3">
+        <input type="radio" name="my-accordion-2" />
+        <div class="collapse-title text-xl font-medium">4. How long does a typical design project take to complete?</div>
+        <div class="collapse-content">
+          <p>The timeline for a design project varies based on the scope and complexity. For smaller residential projects, it might take a few weeks, while larger commercial spaces could take several months. We work efficiently to meet deadlines while ensuring that every detail is perfect. We'll provide a clear timeline during our initial consultation.</p>
+        </div>
+      </div>
+    </div>
+    <div class="flex justify-center items-center">
+      <img src="./assets/faq-img-2.png" alt="" class="w-auto h-[400px]">
+    </div>
+  </div>
+  </section>
 
-  
   <footer class="footer footer-center bg-[#1C1C1C] text-base-content rounded p-10">
     <div class="flex">
     <a class="btn btn-ghost text-xl text-base-200"> <img src="./assets/arrow-up-right-blue.png" alt="" height="22"
