--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
         <div class="max-w-3xl">
           <div class="m-auto lg:max-w-lg max-sm:p-3 max-sm:max-w-xs"><img src="./assets/banner.png" alt=""></div>
           <div>
-            <h1 class="lg:text-5xl max-sm:text-5xl py-3 font-bold">A barn house of this design has a striking appearance
+            <h1 class="lg:text-5xl max-sm:text-5xl py-3 font-bold">Design Your Dream Space.
             </h1>
             <p class="py-6 max-sm:p-2 ">
-              The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered
-              wood, sleek metal accents, and large windows that flood the space with natural light.
+              Transform your vision into reality with expert house design services tailored to meet your residential and commercial needs. Let's create a space that truly reflects your style and purpose.
             </p>
-            <a class="btn bg-[#ABEF5F80] rounded-[32px] my-3 max-sm:px-24">View Details <img src="./assets/arrow-up-right-blue.png" alt=""
+            <a class="btn bg-[#ABEF5F80] rounded-[32px] my-1 max-sm:px-24">View Details <img src="./assets/arrow-up-right-blue.png" alt=""
                 height="25" width="25"></a>
           </div>
         </div>
@@ -111,22 +110,21 @@
           <button class=" bg-white text-center px-2 rounded-box"> <i class="fa-solid fa-arrow-right pe-1"
               style="color: #000000;"></i>About
             us</button>
-          <h2 class="text-4xl py-3 font-bold">We design thoughtful, liveable spaces</h2>
-          <p class="text-base py-4">The barn house captivates with its blend of rustic charm and
-            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <h2 class="text-4xl py-3 font-bold">Crafting Unique Spaces for Every Purpose.</h2>
+          <p class="text-base py-4">Whether you're looking to design a cozy home or a dynamic commercial space, we offer tailored solutions that blend functionality with aesthetics.  </p>
         </div>
         <div class="flex p-2 max-sm:p-3 bg-white rounded-lg mb-5 lg:items-center">
           <div><img src="./assets/commercial.png" alt="" class="lg:px-3 max-sm:pt-3"></div>
           <div class="ps-3 py-1">
             <p class="text-base font-bold">Commercial</p>
-            <p class="text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+            <p class="text-base">Design that stands out and enhances your brand identity.</p>
           </div>
         </div>
         <div class="flex p-2 max-sm:p-3  bg-white rounded-lg  lg:items-center ">
           <div><img src="./assets/residential.png" alt="" class="lg:px-3 max-sm:pt-3"></div>
           <div class="ps-3 py-1">
             <p class="text-base font-bold">Residential</p>
-            <p class="text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+            <p class="text-base">Create a home that reflects your unique style and comfort.  </p>
           </div>
         </div>
       </div>
@@ -142,38 +140,35 @@
       <button class=" bg-white text-center px-2 rounded-box"> <i class="fa-solid fa-arrow-right pe-1"
           style="color: #000000;"></i>How we works</button>
       <h2 class="text-5xl font-bold py-4">Our Works Process</h2>
-      <p class="text-base">The barn house captivates with its blend of rustic charm and modern sophistication,<br>
-        featuring
-        weathered wood,
-        sleek metal accents.</p>
+      <p class="text-base">Our streamlined process ensures that your project is handled with care, precision, and creativity at every stage. </p>
     </div>
     <div class="grid lg:grid-cols-4 max-sm:grid-cols-1 m-auto gap-5 py-6 max-w-5xl">
       <div class="bg-[#E7C1D3] rounded-lg p-4">
         <img src="./assets/group/light.png" alt="" class="py-2 px-2">
         <div class="px-2">
           <p class="text-base font-bold py-2">Concept</p>
-          <p class="text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+          <p class="text-base">We begin by understanding your ideas and transforming them into a clear vision.</p>
         </div>
       </div>
       <div class="bg-[#EFDA6E] rounded-lg p-4">
         <img src="./assets/group/design.png" alt="" class="py-2 px-2">
         <div class="px-2">
-          <p class="text-base font-bold py-2">Concept</p>
-          <p class="text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+          <p class="text-base font-bold py-2">Design Process</p>
+          <p class="text-base">Our team creates detailed designs, ensuring functionality and aesthetics are perfectly balanced.</p>
         </div>
       </div>
       <div class="bg-[#A4DAC3] rounded-lg p-4">
         <img src="./assets/group/eye.png" alt="" class="py-2 px-2">
         <div class="px-2">
-          <p class="text-base font-bold py-2">Concept</p>
-          <p class="text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+          <p class="text-base font-bold py-2">Supervision</p>
+          <p class="text-base">We oversee every phase of construction, ensuring quality and adherence to the design.</p>
         </div>
       </div>
       <div class="bg-[#77AAEA] rounded-lg p-4">
         <img src="./assets/group/budget-planning 1.png" alt="" class="py-2 px-2">
         <div class="px-2">
-          <p class="text-base font-bold py-2">Concept</p>
-          <p class="text-base">The barn house captivates with its blend of rustic charm and modern.</p>
+          <p class="text-base font-bold py-2">Budget Planning</p>
+          <p class="text-base">We provide accurate budgeting to keep your project on track without unexpected costs.</p>
         </div>
       </div>
     </div>
@@ -186,40 +181,37 @@
         <button class=" bg-[#ABEF5F33] text-center px-2 rounded-box"> <i class="fa-solid fa-arrow-right pe-1"
             style="color: #000000;"></i>Explore our Latest works</button>
         <h2 class="text-5xl font-bold py-4">Our Latest Portfolio</h2>
-        <p class="text-base pb-8 px-4">The barn house captivates with its blend of rustic charm and modern sophistication,<br>
-          featuring
-          weathered wood, sleek metal accents.</p>
+        <p class="text-base pb-8 px-4">Our portfolio showcases the latest in residential and commercial design,<br> blending creativity and functionality to create exceptional spaces.</p>
       </div>
       <div class="grid grid-cols-12 gap-5 m-auto lg:max-w-[80%] max-sm:flex max-sm:flex-col max-sm:max-w-[90%]"> <!-- main -->
         <div class="col-span-8 flex p-4 border-solid border-2 border-base-200 rounded-xl max-sm:flex max-sm:flex-col">  <!-- main-1 -->
           <img src="./assets/img1.png" alt="" class="lg:w-52">
-          <div class="ps-3">
-            <p class="text-base font-bold py-2">Commercial</p>
-            <p class="text-base ">The barn house captivates with its blend of rustic charm and modern. The barn house
-              captivates with its blend of rustic charm and modern .</p>
-            <button class=" bg-base-100 text-center  rounded-box flex  py-2 font-bold">View Details <img
+          <div class="ps-3 flex-col items-center justify-center my-3">
+            <p class="text-base font-bold py-2 ">Commercial</p>
+            <p class="text-base ">A sleek and modern commercial design that enhances productivity, reflects brand identity, and inspires innovation and collaboration.</p>
+            <button class=" bg-base-100 text-center  rounded-box flex  pt-2 font-bold">View Details <img
                 src="./assets/arrow-up-right-blue.png" alt="" height="22" width="22" class="mx-2"></button>
           </div>
         </div>
-        <div class="col-span-4 flex p-4 justify-center border-solid border-2 border-base-200 rounded-lg"> <!-- main-2 -->
+        <div class="col-span-4 flex p-4 justify-center border-solid border-2 border-base-200 rounded-xl"> <!-- main-2 -->
           <img src="./assets/img2.png" alt="" class="">
         </div>
-        <div class="col-span-3 flex p-4 border-solid border-2 border-base-200 rounded-lg justify-center"> <!-- main-3 -->
-          <img src="./assets/img3.png" alt="" class="max-sm:scale-x-[1.35] object-cover">
+        <div class="col-span-3 flex p-4 border-solid border-2 border-base-200 rounded-xl justify-center"> <!-- main-3 -->
+          <img src="./assets/img3.png" alt="" class="">
         </div>
-        <div class="col-span-6 flex p-4 border-solid border-2 border-base-200 rounded-lg max-sm:flex max-sm:flex-col"> <!-- main-4 -->
+        <div class="col-span-6 flex p-4 border-solid border-2 border-base-200 rounded-xl max-sm:flex max-sm:flex-col"> <!-- main-4 -->
           <img src="./assets/img4.png" alt="" class="lg:w-52">
           <div class="ps-3">
-            <p class="text-base font-bold py-2">Commercial</p>
-            <p class="text-base">The barn house captivates with its blend of rustic charm and modern. </p>
+            <p class="text-base font-bold py-2">Residential</p>
+            <p class="text-base">A warm, inviting residential design that perfectly balances comfort, style, and functionality.</p>
             <button class=" bg-base-100 text-center  rounded-box flex font-bold ">
               View Details
               <img src="./assets/arrow-up-right-blue.png" alt="" height="22" width="22" class="mx-2">
             </button>
           </div>
         </div>
-        <div class="col-span-3 flex justify-center p-4 border-solid border-2 border-base-200 rounded-lg"> <!-- main-5 -->
-          <img src="./assets/img5.png" alt="" class="max-sm:scale-x-[1.35] object-cover ">
+        <div class="col-span-3 flex justify-center p-4 border-solid border-2 border-base-200 rounded-xl"> <!-- main-5 -->
+          <img src="./assets/img5.png" alt="" class="">
         </div>
       </div>
     </div>
@@ -230,14 +222,14 @@
       <button class=" bg-[#ABEF5F33] text-center px-2 rounded-box"> <i class="fa-solid fa-arrow-right pe-1"
           style="color: #000000;"></i>Let’s Connect</button>
       <h2 class="text-5xl font-bold py-4">Let’s Discuss Next Project</h2>
-      <p class="text-base pb-8 px-4">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
+      <p class="text-base pb-8 px-4">Ready to bring your vision to life? Let's discuss your next project<br> and create a space that perfectly suits your needs.</p>
     </div>
     <form action="" class="grid grid-cols-2 max-sm:flex max-sm:flex-col max-sm:max-w-[80%] max-sm:justify-center  gap-4 m-auto lg:max-w-[50%]">
-      <input type="text" placeholder="First Name*" class="input  w-full max-w-xs rounded-[32px]" />
-      <input type="text" placeholder="Last Name*" class="input  w-full max-w-xs rounded-[32px]" />
-      <input type="text" placeholder="Phone Number*" class="input  w-full max-w-xs rounded-[32px]" />
-      <input type="text" placeholder="Email Number*" class="input  w-full max-w-xs rounded-[32px]" />
-      <textarea class="textarea  col-span-2 rounded-[32px] max-sm:max-w-xs" placeholder="Write your message here"></textarea>
+      <input type="text" placeholder="First Name*" class="input  w-full max-w-md rounded-[32px]" />
+      <input type="text" placeholder="Last Name*" class="input  w-full max-w-md rounded-[32px]" />
+      <input type="text" placeholder="Phone Number*" class="input  w-full max-w-md rounded-[32px]" />
+      <input type="text" placeholder="Email Number*" class="input  w-full max-w-md rounded-[32px]" />
+      <textarea class="textarea  col-span-2 rounded-[32px] max-sm:max-w-md" placeholder="Write your message here"></textarea>
       <button class="btn btn-block bg-[#ABEF5F] rounded-[32px] col-span-2">Send Mail <img src="./assets/arrow-up-right-black.png" alt=""
         height="25" width="25"></button>
    </form>
@@ -293,7 +285,7 @@
       width="22">Rinterio</a>
     </div>
     <div class="text-center">
-      <p class="text-base-200 px-4">The barn house captivates with its blend of rustic charm and modern sophistication,<br> featuring weathered wood, sleek metal accents.</p>
+      <p class="text-base-200 px-4">Thank you for visiting. We're dedicated to turning your design dreams into reality.<br> Contact us today to start your journey toward a beautifully crafted space.</p>
     </div>
     <nav class="grid grid-flow-col lg:gap-16 text-base-300 max-sm:flex max-sm:flex-col">
       <a class="link link-hover">Home</a>
