--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html data-theme="light">
 
 <head>
   <meta charset="UTF-8">
@@ -34,7 +34,7 @@
       </style>
 </head>
 
-<body class="font-manrope">
+<body class="font-manrope ">
   <header class="lg:mx-8 bg-base-100">
     <nav>
       <div class="navbar ">
