--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <p class="py-6 max-sm:p-2 ">
               Transform your vision into reality with expert house design services tailored to meet your residential and commercial needs. Let's create a space that truly reflects your style and purpose.
             </p>
-            <a class="btn bg-[#ABEF5F80] rounded-[32px] my-1 max-sm:px-24">View Details <img src="./assets/arrow-up-right-blue.png" alt=""
+            <a class="btn bg-[#ABEF5F80] rounded-[32px] my-1 max-sm:flex">View Details <img src="./assets/arrow-up-right-blue.png" alt=""
                 height="25" width="25"></a>
           </div>
         </div>
@@ -101,7 +101,7 @@
   <!-- hero-ends -->
   <!-- About-us -->
   <section class="bg-base-200">
-    <div class="py-16 grid grid-cols-2 max-sm:grid-cols-1  max-w-[80%] m-auto">
+    <div class="py-16 grid grid-cols-2 max-sm:grid-cols-1 max-sm:max-w-[90%] max-w-[80%] m-auto">
       <div class="">
         <div class="max-sm:text-center">
           <div class="relative right-6 bottom-4 max-sm:hidden"><img src="./assets/Vector-arrow.png" alt="" class="" width="90"
@@ -140,7 +140,7 @@
       <button class=" bg-white text-center px-2 rounded-box"> <i class="fa-solid fa-arrow-right pe-1"
           style="color: #000000;"></i>How we works</button>
       <h2 class="text-5xl font-bold py-4">Our Works Process</h2>
-      <p class="text-base">Our streamlined process ensures that your project is handled with care, precision, and creativity at every stage. </p>
+      <p class="text-base m-auto max-w-2xl">Our streamlined process ensures that your project is handled with care, precision, and creativity at every stage. </p>
     </div>
     <div class="grid lg:grid-cols-4 max-sm:grid-cols-1 m-auto gap-5 py-6 max-w-5xl">
       <div class="bg-[#E7C1D3] rounded-lg p-4">
@@ -177,11 +177,11 @@
   <!-- our-portfolio -->
   <section class="bg-base-100 py-8">
     <div>
-      <div class="text-center">
+      <div class="text-center m-auto max-w-2xl">
         <button class=" bg-[#ABEF5F33] text-center px-2 rounded-box"> <i class="fa-solid fa-arrow-right pe-1"
             style="color: #000000;"></i>Explore our Latest works</button>
-        <h2 class="text-5xl font-bold py-4">Our Latest Portfolio</h2>
-        <p class="text-base pb-8 px-4">Our portfolio showcases the latest in residential and commercial design,<br> blending creativity and functionality to create exceptional spaces.</p>
+        <h2 class="text-5xl font-bold py-4 text-wrap">Our Latest Portfolio</h2>
+        <p class="text-base pb-8 px-4">Our portfolio showcases the latest in residential and commercial design, blending creativity and functionality to create exceptional spaces.</p>
       </div>
       <div class="grid grid-cols-12 gap-5 m-auto lg:max-w-[80%] max-sm:flex max-sm:flex-col max-sm:max-w-[90%]"> <!-- main -->
         <div class="col-span-8 flex p-4 border-solid border-2 border-base-200 rounded-xl max-sm:flex max-sm:flex-col">  <!-- main-1 -->
@@ -194,10 +194,10 @@
           </div>
         </div>
         <div class="col-span-4 flex p-4 justify-center border-solid border-2 border-base-200 rounded-xl"> <!-- main-2 -->
-          <img src="./assets/img2.png" alt="" class="">
+          <img src="./assets/img2.png" alt="" class="max-sm:w-[500px]">
         </div>
         <div class="col-span-3 flex p-4 border-solid border-2 border-base-200 rounded-xl justify-center"> <!-- main-3 -->
-          <img src="./assets/img3.png" alt="" class="">
+          <img src="./assets/img3.png" alt="" class="max-sm:w-[500px]">
         </div>
         <div class="col-span-6 flex p-4 border-solid border-2 border-base-200 rounded-xl max-sm:flex max-sm:flex-col"> <!-- main-4 -->
           <img src="./assets/img4.png" alt="" class="lg:w-52">
@@ -211,18 +211,18 @@
           </div>
         </div>
         <div class="col-span-3 flex justify-center p-4 border-solid border-2 border-base-200 rounded-xl"> <!-- main-5 -->
-          <img src="./assets/img5.png" alt="" class="">
+          <img src="./assets/img5.png" alt="" class="max-sm:w-[500px]">
         </div>
       </div>
     </div>
   </section>
   <!-- ##our-portfolio-ends -->
    <section class="py-8 bg-[url('./assets/bg.jpg')] bg-cover">
-    <div class="text-center">
+    <div class="text-center m-auto max-w-2xl">
       <button class=" bg-[#ABEF5F33] text-center px-2 rounded-box"> <i class="fa-solid fa-arrow-right pe-1"
           style="color: #000000;"></i>Let’s Connect</button>
       <h2 class="text-5xl font-bold py-4">Let’s Discuss Next Project</h2>
-      <p class="text-base pb-8 px-4">Ready to bring your vision to life? Let's discuss your next project<br> and create a space that perfectly suits your needs.</p>
+      <p class="text-base pb-8 px-4">Ready to bring your vision to life? Let's discuss your next project and create a space that perfectly suits your needs.</p>
     </div>
     <form action="" class="grid grid-cols-2 max-sm:flex max-sm:flex-col max-sm:max-w-[80%] max-sm:justify-center  gap-4 m-auto lg:max-w-[50%]">
       <input type="text" placeholder="First Name*" class="input  w-full max-w-md rounded-[32px]" />
@@ -285,7 +285,7 @@
       width="22">Rinterio</a>
     </div>
     <div class="text-center">
-      <p class="text-base-200 px-4">Thank you for visiting. We're dedicated to turning your design dreams into reality.<br> Contact us today to start your journey toward a beautifully crafted space.</p>
+      <p class="text-base-200 px-4 max-w-xl">Thank you for visiting. We're dedicated to turning your design dreams into reality. Contact us today to start your journey toward a beautifully crafted space.</p>
     </div>
     <nav class="grid grid-flow-col lg:gap-16 text-base-300 max-sm:flex max-sm:flex-col">
       <a class="link link-hover">Home</a>
@@ -295,7 +295,7 @@
       <a class="link link-hover">Contact Us</a>
     </nav>
     <div class="flex max-w-[90%]">
-    <a class="btn btn-block bg-primary rounded-[32px] px-16">Book Consult <img
+    <a class="btn btn-block bg-primary rounded-[32px] max-sm:flex">Book Consult <img
       src="./assets/arrow-up-right-black.png" alt="" height="25" width="25"></a>
     </div>
   </footer>
