--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   </section>
   <!-- our-works ends -->
   <!-- our-portfolio -->
-  <section class="bg-base-100 py-8">
+  <section class="bg-base-100  py-8">
     <div>
       <div class="text-center m-auto max-w-2xl">
         <button class=" bg-[#ABEF5F33] text-center px-2 rounded-box"> <i class="fa-solid fa-arrow-right pe-1"
@@ -279,8 +279,8 @@
   </div>
   </section>
 
-  <footer class="footer footer-center bg-[#1C1C1C] text-base-content rounded p-10">
-    <div class="flex">
+  <footer class="footer footer-center bg-[#1C1C1C] text-base-content rounded p-10 max-sm:place-items-stretch">
+    <div class="flex justify-center">
     <a class="btn btn-ghost text-xl text-base-200"> <img src="./assets/arrow-up-right-blue.png" alt="" height="22"
       width="22">Rinterio</a>
     </div>
@@ -294,7 +294,7 @@
       <a class="link link-hover">Blogs</a>
       <a class="link link-hover">Contact Us</a>
     </nav>
-    <div class="flex max-w-[90%]">
+    <div class="flex">
     <a class="btn btn-block bg-primary rounded-[32px] max-sm:flex">Book Consult <img
       src="./assets/arrow-up-right-black.png" alt="" height="25" width="25"></a>
     </div>
